--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rollup + Shoelace + Lit Site</title>
-    <!-- Include the Shoelace theme stylesheet -->
-    <link rel="stylesheet" href="node_modules/@shoelace-style/shoelace/dist/themes/light.css" />
+    <!-- Include the bundled CSS -->
+    <link rel="stylesheet" href="dist/bundle.css" />
   </head>
   <body>
     <!-- Our custom element -->
