--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rollup + Shoelace + Lit Site</title>
+    <style>
+      /* Remove default margin and padding */
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>    
     <!-- Include the bundled CSS -->
     <link rel="stylesheet" href="dist/bundle.css" />
   </head>
