--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
   </head>
   <body>
     <!-- Our custom element -->
+    <prism-code code="function greet() { console.log('Hello, world!'); }" language="javascript"></prism-code>
+    <prism-code-wrapper 
+    code="function greet() { console.log('Hello, world!'); }" 
+    language="javascript">
+  </prism-code-wrapper>
+
     <my-app></my-app>
     <!-- Load the bundled script -->
     <script type="module" src="dist/bundle.js"></script>
