--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
   <body>
     <!-- Our custom element -->
     <prism-code code="function greet() { console.log('Hello, world!'); }" language="javascript"></prism-code>
-    <prism-code-wrapper 
-    code="function greet() { console.log('Hello, world!'); }" 
-    language="javascript">
-  </prism-code-wrapper>
-
+    <react-programming-demo></react-programming-demo>
     <my-app></my-app>
     <!-- Load the bundled script -->
     <script type="module" src="dist/bundle.js"></script>
