--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <!-- Our custom element -->
     <my-app></my-app>
     <!-- Load the entry script from src -->
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
